--- a/style_about-us.css
+++ b/style_about-us.css
@@ -1,429 +1,72 @@
-/* Overall */
-
-* {
-    margin: auto;
-    padding: 50;
-    box-sizing: border-box;
-}
-    
 body
 {
-    margin: 0;
-    background-color: #0071c5;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-/* Header */
-
-.tct-logo
-{
-    height: 40px;
-}
-
-.topnav
-{
-    overflow: hidden;
-    background-color: #00ff7f;
-}
-    
-.topnav a
-{
-    float: left;
-    display: block;
-    color: black;
-    font-weight:bolder;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-}
-    
-.topnav a:hover
-{
-    background-color: #bfbfbf;
-    color: black;
-}
-    
-.topnav a.active
-{
-    background-color: #2196F3;
     color: white;
-    font-weight: bolder;
+    font-family: Arial, Helvetica, sans-serif;
+    background-image: linear-gradient(-225deg, #9EFBD3 0%, #57E9F2 48%, #45D4FB 100%);
 }
 
-.topnav table
+span
 {
-    margin: 0;
+    color: #E94B3CFF;
 }
-    
-.topnav .search-container
+
+.wrapper
 {
-    float: right;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform:translate(-50%, -50%);
+    padding: 15px;
+    width: 40%;
+    background: black;
+    border-radius: 5px;
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 }
-    
-.topnav input[type=text]
+
+/* Neon Text Effect */
+#div-title
 {
-    padding: 6px;
-    margin-top: 8px;
-    font-size: 17px;
+    color: white;
+    font-size: 40px;
+    padding-left: 0;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    line-height: 0;
+    font-family: 'Pacifico';
+    animation: neon 60s infinite;
+}
+
+@keyframes neon
+{
+    0%, 39%, 41%, 59%, 61%, 100%
+    {
+        text-shadow:
+        white 0 0 12px,
+        #ff3aad 0 0 24px,
+        #ff3aad 0 0 36px;
+    }
+
+    40%, 60%
+    {
+        text-shadow: none;
+    }
+}
+/* Neon Text Effect - Finished */
+
+input
+{
+    outline: none;
     border: none;
+    padding: 10px;
 }
-    
-.topnav .search-container button
+
+button
 {
-    float: right;
-    padding: 6px 10px;
-    margin-top: 8px;
-    margin-right: 16px;
-    background: #ddd;
-    font-size: 17px;
-    border: none;
+    color: white;
+    padding: 10px;
+    border: 2px solid white;
+    background: black;
+    display: block;
+    margin-top: 10%;
     cursor: pointer;
 }
-    
-.topnav .search-container button:hover
-{
-    background: #ccc;
-}
-    
-@media screen and (max-width: 600px)
-{
-    .topnav .search-container
-    {
-        float: none;
-    }
-        
-    .topnav a, .topnav input[type=text], .topnav .search-container button
-    {
-        float: none;
-        display: block;
-        text-align: left;
-        width: 100%;
-        margin: 0;
-        padding: 14px;
-    }
-        
-    .topnav input[type=text]
-    {
-        border: 1px solid #ccc;
-    }
-}
-
-.navbar
-{
-    overflow: hidden;
-    background-color: #333;
-}
-  
-.navbar a
-{
-    float: left;
-    font-size: 16px;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-  
-.dropdown
-{
-    float: left;
-    overflow: hidden;
-}
-  
-.dropdown .dropbtn
-{
-    font-size: 17px;  
-    border: none;
-    outline: none;
-    color: black;
-    font-weight:bolder;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit;
-    margin: 0;
-}
-  
-.navbar a:hover, .dropdown:hover .dropbtn
-{
-    background-color: #bfbfbf;
-}
-  
-.dropdown-content
-{
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-  
-.dropdown-content a
-{
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-  
-.dropdown-content a:hover
-{
-    background-color: #bfbfbf;
-}
-  
-.dropdown:hover .dropdown-content
-{
-    display: block;
-}
-
-
-/* [Content] */
-
-#tct-full-logo
-{
-    /* margin: 240; */
-    width: 350px;
-    padding-top: 5px;
-}
-
-#tct-full-logo-div
-{
-    /* margin: 240; */
-    position: relative;
-    /* top: 50%;
-    left: 50%; */
-    /* -ms-transform: translate(-50%,-50%);
-    transform: translate(-50%,-50%)
-}
-
-#shopee-grid-cointainer
-{
-    float: left;
-    width: 50%;
-    height: 160px;
-    /* display: inline-grid;
-    grid-template-columns: auto;
-    background: #ebf0f6; */
-    padding: 20px;
-}
-
-#shopee-grid-container
-{
-    background-color: #ee4e2e;
-    border: 3px solid #E6F4F1;
-    /* border-collapse: collapse; */
-}
-
-#shopee-left-region
-{
-    float: left;
-    width: 140px;
-    height: 240px;
-    background: #f9f871;
-    padding: 20px;
-}
-
-#shopee-right-region
-{
-    float: left;
-    width: 360px;
-    height: 140px;
-    background: #ee4e2e;
-    padding: 20px;
-}
-
-#shopee-left-table
-{
-    float: left;
-    width: 200px;
-    height: 165px;
-    background: #C4D2BD;
-    padding: 20px;
-}
-
-#shopee-right-table
-{
-    float: left;
-    width: 300px;
-    height: 165px;
-    background: #F7F5DD;
-    padding: 20px;
-}
-
-#lazada-grid-container
-{
-    border: 3px solid #E6F4F1;
-    background-color: #0d1274;
-    /* float: left;
-    width: 50%;
-    height: 160px;
-    background: #fff;
-    padding: 20px; */
-}
-
-#lazada-left-region
-{
-    float: left;
-    width: 140px;
-    height: 240px;
-    background: #f9f871;
-    padding: 20px;
-    }
-
-#lazada-right-region
-{
-    float: left;
-    width: 360px;
-    height: 140px;
-    background: #0d1274;
-    padding: 20px;
-}
-
-#lazada-left-table
-{
-    float: left;
-    width: 200px;
-    height: 165px;
-    background: #C4D2BD;
-    padding: 20px;
-}
-
-#lazada-right-table
-{
-    float: left;
-    width: 300px;
-    height: 165px;
-    background: #F7F5DD;
-    padding: 20px;
-}
-
-/* background: #ffd24c; DARK YELLOW */
-
-h2, h3, h4
-{
-    color: #ffffff;
-}
-
-.shopee-left-table-h4
-{
-    color: #2F4858;
-}
-
-.shopee-right-table-h4
-{
-    color: #2F4858;
-    text-decoration: none;
-}
-
-.lazada-left-table-h4
-{
-    color: #2F4858;
-}
-
-.lazada-right-table-h4
-{
-    color: #2F4858;
-    text-decoration: none;
-}
-
-/* Neon Button */
-
-#shopee-neon-button-wrapper
-{
-    margin: 0;
-    padding-top: 160px;
-    /* padding-left: 20px; */
-    display: fixed;
-    /* display: flex; */
-    justify-content: center;
-    align-items: center;
-    height: 15vh;
-    background: #ee4e2e;
-}
-
-#lazada-neon-button-wrapper
-{
-    margin: 0;
-    padding-top: 160px;
-    display: fixed;
-    justify-content: center;
-    align-items: center;
-    height: 15vh;
-    background: #0d1274;
-}
-
-:root
-{
-  --clr-neon1: hsl(276,100%,96%);
-  /* --clr-neon: hsl(60 92% 71%); */
-  /* --clr-neon: hsl(317 100% 54%); */
-  --clr-bg1: hsl(323 21% 16%);
-}
-
-    .shopee-neon-button
-    {
-      font-size: 18px;
-      font-weight: bold;
-      height: 55px;
-      width: 150px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      cursor: pointer;
-      font-family: 'Balsamiq Sans';
-      text-decoration: none;
-      color: var(--clr-neon1);
-      border: var(--clr-neon1) 3px solid;
-      background-color: transparent;
-      border-radius: 0.25em;
-      /* text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em currentColor; */
-      box-shadow: inset 0 0 0.5em 0 var(--clr-neon1), 0 0 0.5em 0 var(--clr-neon1);
-      transition: all 0.5s;
-    }
-     
-    .shopee-neon-button:hover
-    {
-        background-color: var(--clr-neon1);
-        color: #3B2A1F;
-        /* color: fff; */
-        font-weight: bolder;
-    }
-
-:root
-{
-  --clr-neon2: hsl(276,100%,96%);
-  /* --clr-neon: hsl(317 100% 54%); */
-  --clr-bg2: hsl(323 21% 16%);
-}
-
-    .lazada-neon-button
-    {
-      font-size: 18px;
-      font-weight: bold;
-      height: 55px;
-      width: 150px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      cursor: pointer;
-      font-family: 'Balsamiq Sans';
-      text-decoration: none;
-      color: var(--clr-neon2);
-      border: var(--clr-neon2) 3px solid;
-      background-color: transparent;
-      border-radius: 0.25em;
-      /* text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em currentColor; */
-      box-shadow: inset 0 0 0.5em 0 var(--clr-neon2), 0 0 0.5em 0 var(--clr-neon2);
-      transition: all 0.5s;
-    }
-     
-    .lazada-neon-button:hover
-    {
-        background-color: var(--clr-neon2);
-        color: #3B2A1F;
-        /* color: fff; */
-        font-weight: bolder;
-    }    
