--- a/style_tct.css
+++ b/style_tct.css
@@ -47,14 +47,9 @@ hr {
 
 /* Body */
 
-.pageTitle_description_div
-{
-    margin: 30px 20% 40px 20%;
-}
-
 .home_courier_service_div
 {
-    margin-left: 35%;
+    /* margin-left: 35%; */
     /* margin: 25% 0; */
     /* margin: 2% 0 8% 25%; */
 }
