--- a/style_tct.css
+++ b/style_tct.css
@@ -55,16 +55,47 @@ hr {
     margin-right: 5%;
 }
 .productBrandsLogo img {
-    width: 180px;
+    width: 128px;
     height: auto;
+    user-select: none;
 }
 .productBrandsLogo > div {
-    padding-right: 100px;
+    padding: 0 18px;
 }
 
 #yt-logo-header {
     padding-right: 28px;
 }
+
+#tctFull_home {
+    border: 0.3em solid #d9a21b;
+    padding: 1em 3em;
+    border-radius: 2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    max-width: 25em;
+}
+
+#tctFull_home img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 0.5em;
+}
+
+#deliveryMan {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    max-width: 150px;
+    height: auto;
+    border-radius: 0.5em;
+}
+
 
 /* Body */
 
@@ -382,7 +413,7 @@ $blue: #03b5d2; */
 #tct-full-logo
 {
     /* margin: 240; */
-    width: 350px;
+    width: 228px;
     padding-top: 5px;
 }
 
